This project is now a PWA
First and basic configuration of PWA using django-pwa.
Expected custom service worker and other cosmetics configuration
to be updated

--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ colorama==0.4.3
 cssselect2==0.3.0
 defusedxml==0.6.0
 Django==3.1
+django-pwa==1.0.10
 djangorestframework==3.11.1
 html5lib==1.1
 isort==5.5.3
